Removed unnecessary files and changed app name

--- a/repair-shop-mobile-frontend/package.json
+++ b/repair-shop-mobile-frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "repair-shop-mobile-frontend",
+  "name": "Repair shop",
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
